tests/pass/array-init.ct
export var x = [ 5, 6, 7 ];