tests/fail/direct-index.ct
var x = [25, 60, 75] of int[3];
